saving website work

--- a/pokemonhome.html
+++ b/pokemonhome.html
@@ -10,6 +10,7 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
+        list-style-position: inside;
         width: 50%;
         }
         #ascii{
@@ -20,12 +21,18 @@
         #favorite-ghost-pokemon{
             background-color: blueviolet;
         }
+        #firstH6{
+                color: brown;
+                background-color: azure;
+                font-family: cursive;
+                font-size: large;
+            }
          marquee{
       font-size: 30px;
       font-weight: 800;
       color: #1236c5;
       background-color: crimson;
-      font-family: sans-serif;
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
       text-align: center;
       }
         body{
@@ -53,14 +60,12 @@ _,-'       `.     |    |  /`.   \,-'    |   \  /   |   |    \  |`.
 
     <img src ="https://media.tenor.com/rcuxuxJjDcoAAAAC/pok%C3%A9mon-gengar.gif" class="center"/>
     <div id = favorite-ghost-pokemon>
-        <h6>My favorite ghost pokémon</h6>
-        <ol>
-            <li class="bold weird">
-            Lose your sanity
-            </li>
+       <span id="firstH6"> <h6 style = text-align:center>My favorite ghost pokémon</h6></span> 
+        <ol class = center>
+            <li>Lose your sanity </li>
             <li>Constantly be willing to fail</li>
             <li>Challenge yourself to be better than your previous self</li>
-            <li style="color: lime; background-color: black;">Takes breaks and find enjoyment in life!</li>
+            <li>Takes breaks and find enjoyment in life!</li>
         </ol>
     </div>
     
