saving website work

--- a/pokemonhome.html
+++ b/pokemonhome.html
@@ -41,7 +41,7 @@
     </style>
 </head>
 <body>
-   <marquee>Pokémon Center</marquee>
+   <marquee scrollamount = 50>Pokémon Center</marquee>
    <h1></h1>
    <pre id = ascii>
     ,'\
@@ -62,12 +62,15 @@ _,-'       `.     |    |  /`.   \,-'    |   \  /   |   |    \  |`.
     <div id = favorite-ghost-pokemon>
        <span id="firstH6"> <h6 style = text-align:center>My favorite ghost pokémon</h6></span> 
         <ol class = center>
-            <li>Lose your sanity </li>
-            <li>Constantly be willing to fail</li>
-            <li>Challenge yourself to be better than your previous self</li>
-            <li>Takes breaks and find enjoyment in life!</li>
+            <li>Darkrai </li>
+            <li>Gengar</li>
+            <li>Giratina</li>
+            <li>Misdreavous</li>
         </ol>
     </div>
+        <marquee direction = down>
+            <img src = "https://img.pokemondb.net/sprites/home/normal/darkrai.png"/>
+        </marquee>
     
 </body>
 </html>
