saving website work

--- a/pokemonhome.html
+++ b/pokemonhome.html
@@ -13,6 +13,9 @@
         list-style-position: inside;
         width: 50%;
         }
+        .left {
+            display:inline-flex;
+        }
         #ascii{
             color:yellow;
             background-color: black;
@@ -27,6 +30,9 @@
                 font-family: cursive;
                 font-size: large;
             }
+        #darkrai{
+            background-color: #1236c500;
+        }
          marquee{
       font-size: 30px;
       font-weight: 800;
@@ -57,8 +63,9 @@ _,-'       `.     |    |  /`.   \,-'    |   \  /   |   |    \  |`.
         \_.-'       |__|    `-._ |              '-.|     '-.| |   |
                                 `'                            '-._|
             </pre>
-
+    <a href="https://bulbapedia.bulbagarden.net/wiki/Gengar_(Pok%C3%A9mon)" target="_blank">
     <img src ="https://media.tenor.com/rcuxuxJjDcoAAAAC/pok%C3%A9mon-gengar.gif" class="center"/>
+    </a>
     <div id = favorite-ghost-pokemon>
        <span id="firstH6"> <h6 style = text-align:center>My favorite ghost pokémon</h6></span> 
         <ol class = center>
@@ -68,9 +75,25 @@ _,-'       `.     |    |  /`.   \,-'    |   \  /   |   |    \  |`.
             <li>Misdreavous</li>
         </ol>
     </div>
-        <marquee direction = down>
+    <div class = "left">
+        <marquee direction = down id="darkrai">
             <img src = "https://img.pokemondb.net/sprites/home/normal/darkrai.png"/>
         </marquee>
-    
+        <marquee direction = down id="darkrai">
+            <img src = "https://img.pokemondb.net/sprites/home/normal/darkrai.png"/>
+        </marquee>
+        <marquee direction = down id="darkrai">
+            <img src = "https://img.pokemondb.net/sprites/home/normal/darkrai.png"/>
+        </marquee>
+         <marquee direction = down id="darkrai">
+            <img src = "https://img.pokemondb.net/sprites/home/normal/darkrai.png"/>
+        </marquee>
+        <marquee direction = down id="darkrai">
+            <img src = "https://img.pokemondb.net/sprites/home/normal/darkrai.png"/>
+        </marquee>
+        <marquee direction = down id="darkrai">
+            <img src = "https://img.pokemondb.net/sprites/home/normal/darkrai.png"/>
+        </marquee>
+    </div>
 </body>
 </html>
